@@ -2034,6 +2034,8 @@ setup_parameters (struct cb_field *f)
 static void
 compute_binary_size (struct cb_field *f, const int size)
 {
+	static const int cb_mf_ibm_comp = 0; //// missing gobal from r2475
+
 	if (cb_binary_size == CB_BINARY_SIZE_1_2_4_8) {
 		f->size = ((size <= 2) ? 1 :
 			   (size <= 4) ? 2 :
@@ -2041,7 +2043,9 @@ compute_binary_size (struct cb_field *f, const int size)
 		return;
 	}
 	if (cb_binary_size == CB_BINARY_SIZE_2_4_8) {
-		if (f->flag_real_binary && size <= 2) {
+		if (f->flag_real_binary 
+		 && cb_mf_ibm_comp != 1 
+		 && size <= 2) {
 			f->size = 1;
 		} else {
 			f->size = ((size <= 4) ? 2 :
