@@ -24237,3 +24237,468 @@ AT_CHECK([./prog], [0], [23 tests & 00 failed
 AT_CLEANUP
 
 #### end r1727
+
+AT_SETUP([MF COMP-5])
+AT_KEYWORDS([NOIBMCOMP])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       77  CMP4     PIC 99   COMP-4.
+       77  CMP5     PIC 99   COMP-5.
+       77  CMP4-4   PIC 9(4) COMP-4.
+       77  CMP5-4   PIC 9(4) COMP-5.
+       PROCEDURE DIVISION.
+           DISPLAY 'LEN PIC 99 COMP-5 is ' LENGTH OF CMP5 " :".
+           DISPLAY 'LEN PIC 99 COMP-4 is ' LENGTH OF CMP4 " :".
+           DISPLAY 'LEN PIC 9(4) COMP-5 is ' LENGTH OF CMP5-4 " :".
+           DISPLAY 'LEN PIC 9(4) COMP-4 is ' LENGTH OF CMP4-4 " :".
+           STOP RUN RETURNING 0.
+])
+
+AT_CHECK([cobc -x -std=mf -w prog.cob ], [0], [], [])
+
+AT_CHECK([./prog], [0], [LEN PIC 99 COMP-5 is 1 :
+LEN PIC 99 COMP-4 is 1 :
+LEN PIC 9(4) COMP-5 is 2 :
+LEN PIC 9(4) COMP-4 is 2 :
+], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([MF COMP-5])
+AT_KEYWORDS([IBMCOMP])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       77  CMP4     PIC 99   COMP-4.
+       77  CMP5     PIC 99   COMP-5.
+       77  CMP4-4   PIC 9(4) COMP-4.
+       77  CMP5-4   PIC 9(4) COMP-5.
+       PROCEDURE DIVISION.
+           DISPLAY 'LEN PIC 99 COMP-5 is ' LENGTH OF CMP5 " :".
+           DISPLAY 'LEN PIC 99 COMP-4 is ' LENGTH OF CMP4 " :".
+           DISPLAY 'LEN PIC 9(4) COMP-5 is ' LENGTH OF CMP5-4 " :".
+           DISPLAY 'LEN PIC 9(4) COMP-4 is ' LENGTH OF CMP4-4 " :".
+           STOP RUN RETURNING 0.
+])
+
+AT_CHECK([cobc -x -std=mf -w -fibmcomp prog.cob ], [0], [], [])
+
+AT_CHECK([./prog], [0], [LEN PIC 99 COMP-5 is 2 :
+LEN PIC 99 COMP-4 is 2 :
+LEN PIC 9(4) COMP-5 is 2 :
+LEN PIC 9(4) COMP-4 is 2 :
+], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([FLOAT-DECIMAL-16 with SIZE ERROR])
+AT_KEYWORDS([FLOAT-DECIMAL])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+      ******************************************************************
+      *                                                                *
+      *  CALCULATIONS WITH 'FLOAT-DECIMAL-16'                          *
+      *                                                                *
+      ******************************************************************
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  CMP1                        COMP-1.
+       01  SV1                         COMP-1.
+       01  CMP2                        COMP-2.
+       01  SV2                         COMP-2.
+       01  FD16                        USAGE FLOAT-DECIMAL-16.
+       01  SV16                        USAGE FLOAT-DECIMAL-16.
+       01  FD34                        USAGE FLOAT-DECIMAL-34.
+       01  SV34                        USAGE FLOAT-DECIMAL-34.
+
+       PROCEDURE DIVISION.
+       CND-000.
+           DISPLAY "--- FLOAT-DECIMAL-34 ---"
+           COMPUTE FD34 = (((1.0E7 / 2.1E0) / 3.1E0) - 5.0E-1) * 6.0E0
+           DISPLAY "A: " FD34
+
+           COMPUTE FD34 = (((1.0E7 / 2.9E0) / 3.9E0) - 5.0E-1) * 6.0E0
+           DISPLAY "B: " FD34
+           MOVE ZERO TO FD34.
+           COMPUTE FD34 = 1.0E3 / 2.1E0
+                   ON SIZE ERROR DISPLAY "Z: " FD34 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "Z: " FD34 " IS OK"
+           END-COMPUTE.
+
+           DISPLAY "    ..."
+           DISPLAY "--- FLOAT-DECIMAL-16 ---"
+           COMPUTE FD16 = (((1.0E7 / 2.1E0) / 3.1E0) - 5.0E-1) * 6.0E0
+           DISPLAY "A: " FD16 
+
+           COMPUTE FD16 = (((1.0E7 / 2.9E0) / 3.9E0) - 5.0E-1) * 6.0E0
+           DISPLAY "B: " FD16
+           MOVE ZERO TO FD16.
+           COMPUTE FD16 = 1.0E3 / 2.1E0
+                   ON SIZE ERROR DISPLAY "Z: " FD16 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "Z: " FD16 " IS OK"
+           END-COMPUTE.
+
+           DISPLAY "    ..."
+           DISPLAY "--- COMP-1 ---"
+           COMPUTE CMP1 = (((1.0E7 / 2.1E0) / 3.1E0) - 5.0E-1) * 6.0E0
+           DISPLAY "A: " CMP1 
+           COMPUTE CMP1 = (((1.0E7 / 2.9E0) / 3.9E0) - 5.0E-1) * 6.0E0
+           DISPLAY "B: " CMP1 
+           MOVE ZERO TO CMP1.
+           COMPUTE CMP1 = 1.0E3 / 2.1E0
+                   ON SIZE ERROR DISPLAY "Z: " CMP1 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "Z: " CMP1 " IS OK"
+           END-COMPUTE.
+
+           DISPLAY "    ..."
+           DISPLAY "--- COMP-2 ---"
+           COMPUTE CMP2 = (((1.0E7 / 2.1E0) / 3.1E0) - 5.0E-1) * 6.0E0
+           DISPLAY "A: " CMP2 
+           COMPUTE CMP2 = (((1.0E7 / 2.9E0) / 3.9E0) - 5.0E-1) * 6.0E0
+           DISPLAY "B: " CMP2 
+           MOVE ZERO TO CMP2.
+           COMPUTE CMP2 = 1.0E3 / 2.1E0
+                   ON SIZE ERROR DISPLAY "Z: " CMP2 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "Z: " CMP2 " IS OK"
+           END-COMPUTE.
+
+           DISPLAY "    ..."
+           DISPLAY "--- 99 + 1 / 3 ---"
+           MOVE -1 TO FD16, FD34, CMP2.
+           COMPUTE FD34 = 99 + 1 / 3
+                   ON SIZE ERROR DISPLAY "FD34: " FD34 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "FD34: " FD34 " IS OK"
+           END-COMPUTE.
+           COMPUTE FD16 = 99 + 1 / 3
+                   ON SIZE ERROR DISPLAY "FD16: " FD16 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "FD16: " FD16 " IS OK"
+           END-COMPUTE.
+           COMPUTE CMP1 = 99 + 1 / 3
+                   ON SIZE ERROR DISPLAY "CMP1: " CMP1 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "CMP1: " CMP1 " IS OK"
+           END-COMPUTE.
+           COMPUTE CMP2 = 99 + 1 / 3
+                   ON SIZE ERROR DISPLAY "CMP2: " CMP2 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "CMP2: " CMP2 " IS OK"
+           END-COMPUTE.
+
+           DISPLAY "    ..."
+           DISPLAY "--- 99 ---"
+           MOVE -1 TO FD16, FD34, CMP2.
+           COMPUTE FD34 = 99 
+                   ON SIZE ERROR DISPLAY "FD34: " FD34 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "FD34: " FD34 " IS OK"
+           END-COMPUTE.
+           COMPUTE FD16 = 99
+                   ON SIZE ERROR DISPLAY "FD16: " FD16 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "FD16: " FD16 " IS OK"
+           END-COMPUTE.
+           COMPUTE CMP1 = 99
+                   ON SIZE ERROR DISPLAY "CMP1: " CMP1 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "CMP1: " CMP1 " IS OK"
+           END-COMPUTE.
+           COMPUTE CMP2 = 99
+                   ON SIZE ERROR DISPLAY "CMP2: " CMP2 " SIZE ERROR"
+               NOT ON SIZE ERROR DISPLAY "CMP2: " CMP2 " IS OK"
+           END-COMPUTE.
+
+       CND-100-OK.
+           DISPLAY "    ..."
+           DISPLAY "--- Test overflow ---"
+           MOVE 9900000000000 TO FD16, FD34.
+           PERFORM 390 TIMES
+             MOVE FD16 TO SV16
+             COMPUTE FD16 = FD16 * 10
+                    ON SIZE ERROR GO TO CND-100-ERR
+             END-COMPUTE
+             IF FD16 < 9.0
+               DISPLAY "FD16: " FD16 " IS Wrong"
+               GO TO CND-100-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "FD16: " FD16 " IS OK".
+           GO TO CND-200-OK.
+       CND-100-ERR.
+           DISPLAY "FD16: after " SV16 " SIZE ERROR".
+
+       CND-200-OK.
+           MOVE 9900000000000 TO FD16, FD34.
+           PERFORM 6500 TIMES
+             MOVE FD34 TO SV34
+             COMPUTE FD34 = FD34 * 10
+                    ON SIZE ERROR GO TO CND-200-ERR
+             END-COMPUTE
+             IF FD34 < 9.0
+               GO TO CND-200-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "FD34: " FD34 " IS OK".
+           GO TO CND-300-OK.
+       CND-200-ERR.
+           DISPLAY "FD34: after " SV34 " SIZE ERROR".
+
+       CND-300-OK.
+           MOVE 990000 TO CMP1.
+           PERFORM 6500 TIMES
+             MOVE CMP1 TO SV1
+             COMPUTE CMP1 = CMP1 * 10
+                    ON SIZE ERROR GO TO CND-350-ERR
+             END-COMPUTE
+             IF CMP1 < 9.0
+               GO TO CND-350-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "CMP1: " CMP1 " IS OK".
+           GO TO CND-350-OK.
+       CND-350-ERR.
+           DISPLAY "CMP1: after " SV1 " SIZE ERROR".
+
+       CND-350-OK.
+           MOVE 9900000000 TO CMP2.
+           PERFORM 6500 TIMES
+             MOVE CMP2 TO SV2
+             COMPUTE CMP2 = CMP2 * 10
+                    ON SIZE ERROR GO TO CND-380-ERR
+             END-COMPUTE
+             IF CMP2 < 9.0
+               GO TO CND-380-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "CMP2: " CMP2 " IS OK".
+           GO TO CND-380-OK.
+       CND-380-ERR.
+           DISPLAY "CMP2: after " SV2 " SIZE ERROR".
+
+       CND-380-OK.
+           DISPLAY "    ..."
+           DISPLAY "--- Test underlow ---"
+           MOVE 0.000000099 TO FD16, FD34.
+           PERFORM 400 TIMES
+             MOVE FD16 TO SV16
+             COMPUTE FD16 = FD16 / 10
+                    ON SIZE ERROR GO TO CND-300-ERR
+             END-COMPUTE
+             IF FD16 = 0.0
+               GO TO CND-300-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "FD16: " FD16 " IS OK".
+           GO TO CND-400-OK.
+       CND-300-ERR.
+           DISPLAY "FD16: after " SV16 " SIZE ERROR".
+
+       CND-400-OK.
+           MOVE 0.000000099 TO FD16, FD34.
+           PERFORM 6600 TIMES
+             MOVE FD34 TO SV34
+             COMPUTE FD34 = FD34 / 10.0
+                    ON SIZE ERROR GO TO CND-400-ERR
+             END-COMPUTE
+             IF FD34 = 0.0
+               GO TO CND-400-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "FD34: " FD34 " IS OK".
+           GO TO CND-500-OK.
+       CND-400-ERR.
+           DISPLAY "FD34: after " SV34 " SIZE ERROR".
+
+       CND-500-OK.
+           MOVE 0.000000099 TO CMP1.
+           PERFORM 350 TIMES
+             MOVE CMP1 TO SV1
+             COMPUTE CMP1 = CMP1 / 10.0
+                    ON SIZE ERROR GO TO CND-500-ERR
+             END-COMPUTE
+             IF CMP1 = 0.0
+               GO TO CND-500-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "CMP1: " CMP1 " IS OK".
+           GO TO CND-600-OK.
+       CND-500-ERR.
+           DISPLAY "CMP1: after " SV1 " SIZE ERROR".
+
+       CND-600-OK.
+           MOVE 0.000000099 TO CMP2.
+           PERFORM 350 TIMES
+             MOVE CMP2 TO SV2
+             COMPUTE CMP2 = CMP2 / 10.0
+                    ON SIZE ERROR GO TO CND-600-ERR
+             END-COMPUTE
+             IF CMP2 = 0.0
+               GO TO CND-600-ERR
+             END-IF
+           END-PERFORM.
+           DISPLAY "CMP2: " CMP2 " IS OK".
+           GO TO CND-600-XIT.
+       CND-600-ERR.
+           DISPLAY "CMP2: after " SV2 " SIZE ERROR".
+       CND-600-XIT.
+
+       CND-999.
+           STOP RUN.
+           END PROGRAM prog.
+])
+
+AT_CHECK([cobc -x -std=cobol2002 -w prog.cob ], [0], [], [])
+
+AT_CHECK([./prog], [0], [--- FLOAT-DECIMAL-34 ---
+A: 9216586.861751152073732718894009216
+B: 5305036.78779840848806366047745358
+Z: 476.1904761904761904761904761904761 IS OK
+    ...
+--- FLOAT-DECIMAL-16 ---
+A: 9216586.861751152
+B: 5305036.787798408
+Z: 476.1904761904761 IS OK
+    ...
+--- COMP-1 ---
+A: 9216587
+B: 5305037
+Z: 476.19049 IS OK
+    ...
+--- COMP-2 ---
+A: 9216586.86175115
+B: 5305036.787798408
+Z: 476.1904761904761 IS OK
+    ...
+--- 99 + 1 / 3 ---
+FD34: 99.33333333333333333333333333333333 IS OK
+FD16: 99.33333333333333 IS OK
+CMP1: 99.333336 IS OK
+CMP2: 99.33333333333333 IS OK
+    ...
+--- 99 ---
+FD34: 99 IS OK
+FD16: 99 IS OK
+CMP1: 99 IS OK
+CMP2: 99 IS OK
+    ...
+--- Test overflow ---
+FD16: after 99E369 SIZE ERROR
+FD34: after 99E6111 SIZE ERROR
+CMP1: after 9.8999983E+37 SIZE ERROR
+CMP2: after 9.899999999999781E+307 SIZE ERROR
+    ...
+--- Test underlow ---
+FD16: after 99E-398 SIZE ERROR
+FD34: after 99E-6176 SIZE ERROR
+CMP1: after 1.4012985E-45 SIZE ERROR
+CMP2: after 9.881312916824931E-324 SIZE ERROR
+], [])
+
+AT_CLEANUP
+
+AT_SETUP([FLOAT-SHORT with SIZE ERROR])
+AT_KEYWORDS([COMP-1])
+
+AT_DATA([prog.cob], [
+       identification division.
+       program-id. prog.
+
+       data division.
+       working-storage section.
+      *------------------------
+       77 counter             pic s9(4) binary value zero.
+      * FLOAT-SHORT (if binary-comp-1 is not active)
+       77 floatValue          COMP-1  value 2.
+       77 lastFloatValue      COMP-1.
+
+      ******************************************************************
+       procedure division.
+       main section.
+           perform varying counter from 1 by 1 until
+                           counter > 130
+      *>      display 'counter: ' counter ', value: ' floatValue
+              compute floatValue = floatValue * 4
+                   ON SIZE ERROR
+                      display 'SIZE ERROR, last value = ' floatValue
+                      exit perform
+               not ON SIZE ERROR
+                      if floatValue > lastFloatValue
+                         move floatValue to lastFloatValue
+                      else
+                         display 'math ERROR, last value > current: '
+                                 lastFloatValue ' > ' floatValue
+                         exit perform
+                      end-if
+              end-compute
+           end-perform
+           display 'counter is ' counter
+
+           goback.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+
+AT_CHECK([./prog], [0],
+[SIZE ERROR, last value = 1.7014118E+38
+counter is +0064
+], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([FLOAT-LONG with SIZE ERROR])
+AT_KEYWORDS([COMP-2])
+
+AT_DATA([prog.cob], [
+       identification division.
+       program-id. prog.
+
+       data division.
+       working-storage section.
+      *------------------------
+       77 counter             pic s9(4) binary value zero.
+      * FLOAT-LONG
+       77 doubleValue         COMP-2 value 2.
+       77 lastDoubleValue     COMP-2.
+
+      ******************************************************************
+       procedure division.
+       main section.
+           perform varying counter from 1 by 1 until
+                           counter > 1060
+      *>      display 'counter: ' counter ', value: ' doubleValue
+              compute doubleValue = doubleValue * 2
+                   ON SIZE ERROR
+                      display 'SIZE ERROR, last value = ' doubleValue
+                      exit perform
+               not ON SIZE ERROR
+                      if doubleValue > lastdoubleValue
+                         move doubleValue to lastdoubleValue
+                      else
+                         display 'math ERROR, last value > current: '
+                                 lastdoubleValue ' > ' doubleValue
+                         exit perform
+                      end-if
+              end-compute
+           end-perform
+           display 'counter is ' counter
+
+           goback.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+
+AT_CHECK([./prog], [0],
+[SIZE ERROR, last value = 1.79769313486225E+308
+counter is +1024
+], [])
+
+AT_CLEANUP
+
