@@ -428,6 +428,10 @@
 	* typeck.c (compare_field_literal): compare literals also against
 	  group items
 
+2018-05-15  Ron Norman <rjn@inglenet.com>
+	* field.c: When -fibmcomp is used, COMP-5 as well as COMP-4/BINARY
+	         should have the size computed as binary-size = 2-4-8
+
 2018-05-15  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (usage_clause): better error message if USAGE is explicit
